# pygeoapi-dev-mod

./: .env  .gitignore  Dockerfile  docker-compose.yml  environment.env  pyproject.toml  readme.md
HOWTO/: docker-compose.yml  get-started-with-rego.md  simple-opal-setup.md
HOWTO/Testing the api/: PYGEOAPI.postman_collection.json  postman.sample.env
data/postgres/: postmaster.pid
data/postgres/base/13756/: pg_internal.init
data/postgres/base/16384/: 1247  1249  1259  16388  16393  16396  16400  16401  16405  16410  16411  16416  16417  16421  16422  16427  16428  16431  16436  16444  16449  16454  16460  16465  16471  16475  16476  16478  16480  16482  16484  16486  16488  16490  16492  16494  16496  16498  16500  16502  (+108 more)
data/postgres/global/: 1214  1232  1233  1260  1262  2671  2676  2677  pg_control  pg_internal.init
data/postgres/pg_stat_tmp/: db_0.stat  db_13756.stat  db_16384.stat  global.stat
pygeoapi-dev/: authenticate.py  docker-compose.yml  example-openapi.yml  main.py  openapi.json  run.py  test.py  utils.py
pygeoapi-dev/policy/: auth.rego
sql/: create_tables.sql  fill_tables.sql
tests/: test_fastgeoapi.py
