[tool.poetry]
name = "fastgeoapi"
version = "0.1.0"
description = ""
authors = ["r-scheele <abdulrahmanolamilekan88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygeoapi = "^0.12.0"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
